feat: 实现服务器配置文件清单系统和验证优化
核心功能：
- 服务器配置文件清单系统（文件层的唯一真理）
  - 数据库表设计（server_config_files, server_log_analysis）
  - 日志分析器（ServerLogAnalyzer）- 7种正则模式
  - 管理界面（ServerConfigFileManagerStage）- 8种筛选器
  - 智能推断：分类、优先级、核心文件判断
  - 已导入45个测试数据（真实日志分析）

- 验证系统优化
  - XmlFieldValidator - 从阻塞错误改为警告（宽进严出）
  - 112个验证规则全部调整为警告
  - 保留验证信息但不阻止导入

- 代码修复
  - DataTemplateDao.incrementUsageCount() 方法
  - TemplateParam.ParamType.REFERENCE 枚举
  - SmartFormBuilder Spinner 泛型问题修复

- 文档完善
  - SERVER_CONFIG_FILE_REGISTRY.md - 系统架构（350行）
  - SERVER_CONFIG_QUICK_START.md - 快速开始（260行）
  - SERVER_CONFIG_IMPLEMENTATION_2025-12-30.md - 实施报告（340行）

- UI 集成
  - 工具栏新增「📋 配置清单」按钮
  - 详细 Tooltip 和事件处理

总计：6个新类（1361行代码）+ 2个SQL脚本 + 4个文档 + 主菜单集成

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>