@@ -3,13 +3,14 @@ package red.jiuzhou.ui.features;
 import java.util.Objects;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import javafx.concurrent.Task;
 
 /**
- * Shared background executor for feature-oriented asynchronous tasks.
+ * 特性任务执行器（虚拟线程版本）
+ *
+ * <p>使用 Java 21+ 虚拟线程实现轻量级并发任务执行。
+ * 虚拟线程由 JVM 管理，无需手动配置线程池大小，自动伸缩。
  */
 public final class FeatureTaskExecutor {
 
@@ -18,16 +19,23 @@ public final class FeatureTaskExecutor {
     private final ExecutorService executor;
 
     private FeatureTaskExecutor() {
-        this.executor = Executors.newCachedThreadPool(new FeatureThreadFactory());
+        // Java 21+ 虚拟线程：轻量级、自动伸缩、无需配置线程池大小
+        this.executor = Executors.newVirtualThreadPerTaskExecutor();
     }
 
+    /**
+     * 提交任务到虚拟线程执行
+     *
+     * @param task       JavaFX Task
+     * @param threadName 线程名称（用于日志追踪）
+     */
     public static void run(Task<?> task, String threadName) {
         Objects.requireNonNull(task, "task must not be null");
         INSTANCE.executor.submit(() -> {
             Thread current = Thread.currentThread();
             String originalName = current.getName();
             try {
-                if (hasText(threadName)) {
+                if (threadName != null && !threadName.isBlank()) {
                     current.setName(threadName);
                 }
                 task.run();
@@ -37,23 +45,10 @@ public final class FeatureTaskExecutor {
         });
     }
 
+    /**
+     * 关闭执行器
+     */
     public static void shutdown() {
         INSTANCE.executor.shutdownNow();
-    }
-
-    private static final class FeatureThreadFactory implements ThreadFactory {
-
-        private final AtomicInteger counter = new AtomicInteger(1);
-
-        @Override
-        public Thread newThread(Runnable runnable) {
-            Thread thread = new Thread(runnable, "feature-task-" + counter.getAndIncrement());
-            thread.setDaemon(true);
-            return thread;
-        }
-    }
-
-    private static boolean hasText(String text) {
-        return text != null && text.trim().length() > 0;
     }
 }
